fixed hover title on player, vertical align of add to queue

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -50,7 +50,7 @@ button
 	z-index: 31
 	margin-left: 10px
 	opacity: 0
-	margin-top: 13px
+	margin-top: 12px
 	position: absolute
 	font-size: 16px
 	color: silver
@@ -565,6 +565,7 @@ div.historyContainer
 		margin-left: -13px
 		vertical-align: top
 		button.addToQueue
+			vertical-align: top
 			font-size: 9px
 			height: 80px
 			width: 20px
